@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.7 2005/03/27 15:43:37 wiz Exp $
+# $NetBSD: Makefile,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 #
 
 PKGREVISION=		2
 
-.include "../../graphics/swfdec/Makefile.common"
+.include "../../multimedia/swfdec/Makefile.common"
 
 PKGNAME=		${DISTNAME:S/-/-gtk2-/}
 COMMENT+=		(GTK2 modules)
@@ -15,6 +15,6 @@ INSTALL_DIRS=		${WRKSRC}/pixbuf-loader
 
 GTK2_LOADERS=		YES
 
-.include "../../graphics/swfdec/buildlink3.mk"
+.include "../../multimedia/swfdec/buildlink3.mk"
 .include "../../x11/gtk2/modules.mk"
 .include "../../mk/bsd.pkg.mk"
