@@ -1,3 +1,3 @@
-@comment $NetBSD: PLIST,v 1.3 2004/09/22 08:09:38 jlam Exp $
+@comment $NetBSD: PLIST,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 lib/gtk-2.0/2.4.0/loaders/swf_loader.la
 @comment in gtk2: @dirrm lib/gtk-2.0/2.4.0/loaders
